@startuml
'https://plantuml.com/class-diagram

left to right direction
interface PlayerDao
class DaoPattern
class Player
class PlayerDaolmpl



class Player {
    - score: int
    - name: String
    - time: String
    + Player(int score, String name, String time)
    + getName():String
    + getScore():int
    + setName(String name): void
    + getTime(): String
    + setScore(int score): void
    + setTime(String time): void
}

interface PlayerDao {
    + {abstract} findPlayer(String name):void
    + {abstract} getAllPlayers():List<Player>
    + {abstract} doAdd(Player player):void
    + {abstract} doDelete(String name):void
    + {abstract} readFromTextFile(String filename): void
    + {abstract} writeToTextFile(String fileName): void
    + {abstract} printPlayersByScore(): void
}

class PlayerDaolmpl{
    - players: List<Player>
    + PlayerDaolmpl()
    + findPlayer(String name):void
    +  getAllPlayers():List<Player>
    +  doAdd(Player player):void
    +  doDelete(String name):void
    +  readFromTextFile(String filename): void
    + writeToTextFile(String fileName): void
    + printPlayersByScore(): void
}

class DaoPattern {
    + DaoPatternNow(int score): void
}

PlayerDaolmpl --> Player
PlayerDao <|.. PlayerDaolmpl
DaoPattern ..> PlayerDao


@enduml